Fixed overflow, moved image player into a comment

--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -3,6 +3,7 @@
     display: grid;
     grid-template-columns: 32.5vw 32.5vw 32.5vw;
     justify-content: space-evenly;
+    overflow-x: hidden
   }
 
 .grid-item{
